tests/baselines/reference/emitArrowFunctionWhenUsingArguments19.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts(5,33): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts (1 errors) ====
    function f() {
        function g() {
            var _arguments = 10;                // No capture in 'g', so no conflict.
            function h() {
                var capture = () => arguments;  // Should trigger an '_arguments' capture into function 'h'
                                    ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.
                foo(_arguments);                // Error as this does not resolve to the user defined '_arguments'
            }
        }
    
        function foo(x: any) {
            return 100;
        }
    }